# ai-linkmo

./: .gitignore  README.md  ai  pyproject.toml  tests.sh
.claude/skills/lokf-librarian/: SKILL.md
.claude/skills/lokf-scaffolding/: SKILL.md
.claude/skills/okf-librarian/: SKILL.md
.github/workflows/: cli-tests.yml  knowledge-librarian.yaml  knowledge-validate.yaml  ui-tests.yml
byo/data/: acme-ai-dso-taxonomy.yaml.bak  acme-ai-taxonomy.yaml.bak  eu_ai_act.yaml  ffiec_it_handbook.yaml  finos-aigf.yaml  iso_42001.yaml  nist_ai_600_1.yaml  nist_sp_800_53_r5.yaml  owasp_llm_top_10.yaml  owasp_ml_top_10.yaml  sr_11_7.yaml
byo/notes/: EXAMPLES.md  OSFF-SUBMISSION.md  PRESENTATION-OUTLINE.md  README.md  SPEAKER-PREP.md  osff-proposal-sessionize-format.md
byo/olddata/: acme-ai-dso-taxonomy.yaml  acme-ai-taxonomy.yaml
graph/: ai-risk-ontology.yaml  crosswalk_nist-ai-rmf_to_acme-risk-taxonomy.csv  crosswalk_nist-ai-rmf_to_finos-aigf.csv  crosswalk_nist-ai-rmf_to_ibm-risk-atlas.csv
graph/cypher/: ai-risk-ontology.cypher  export.py
lib/api/: README.md  constants.py  handlers.py  openapi.yaml  server.py  server_dynamic.py
lib/cli/: README.md  cli.py  utils.py
lib/frontend/: .gitignore  .prettierrc  README.md  STATUS.md  components.json  eslint.config.js  eslint.config.ts  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
lib/frontend/src/: main.js
lib/frontend/src/lib/: App.svelte  STATUS.md  app.css  constants.ts
lib/frontend/src/lib/states/: asides.spec.ts  asides.svelte.ts  auth.svelte.ts  card.svelte.ts  data.svelte.ts  endpoint.spec.ts  endpoint.svelte.ts  filtered.svelte.ts  filters.spec.ts  filters.svelte.ts  index.ts  notify.spec.ts  notify.svelte.ts  related.svelte.ts  schema.svelte.ts  ui.svelte.ts
lib/frontend/src/lib/types/: endpoint.ts  global.d.ts  index.ts  notify.ts  schema.ts  ui.ts  yaml.ts
lib/frontend/src/lib/utils/: auth.ts  card.ts  data.ts  index.ts  linkml.ts  misc.ts  schema.ts  ui.ts
lib/frontend/static/schema/: ai-risk-ontology.json
lib/test/: README.md  check_tests.py  conftest.py  test_api_url_resolution.py  test_byo_put.py  test_cli_examples.py  test_endpoints.py  test_validate_handlers.py  validate_handlers.py
lokf/: .gitignore  README.md  justfile  pyproject.toml  queries.http
lokf/knowledge/: index.md  log.md
lokf/knowledge/datasets/: eu-ai-act.md  ffiec-it-handbook.md  finos-aigf.md  index.md  iso-42001.md  knowledge-graph-export.md  nist-ai-600-1.md  nist-ai-rmf-crosswalks.md  nist-sp-800-53-r5.md  owasp-llm-top-10.md  owasp-ml-top-10.md  sr-11-7.md
lokf/knowledge/org/: finos.md  ibm.md  index.md
lokf/knowledge/playbooks/: bring-your-own-data.md  index.md  install-and-run.md  knowledge-sources.md
lokf/knowledge/references/: ai-risk-ontology.md  eu-ai-act.md  ffiec-it-handbook.md  finos-aigf.md  index.md  iso-42001.md  nist-ai-600-1.md  nist-ai-rmf.md  nist-sp-800-53-r5.md  owasp-llm-top-10.md  owasp-ml-top-10.md  sr-11-7.md
lokf/knowledge/services/: cli.md  fastapi-backend.md  graph-db.md  index.md  web-ui.md
lokf/scripts/: knowledge-librarian.sh
scripts/: tests.sh
(+26 files in other folders)
